--- a/webchat/webchat.html
+++ b/webchat/webchat.html
@@ -1,45 +1,37 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-		<meta charset="utf-8">
+		<meta name = "viewport" content = "width=device-width, initial-scale=1"/>
+		<meta http-equiv = "X-UA-Compatible" content = "IE=edge,chrome=1"/>
+		<meta charset = "utf-8"/>
 		<script
-		  src="https://code.jquery.com/jquery-3.3.1.js"
-		  integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
-		  crossorigin="anonymous">
+		  src = "https://code.jquery.com/jquery-3.3.1.js"
+		  integrity = "sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+		  crossorigin = "anonymous">
 		</script>
 
-		<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
-		<link href="lib/css/webchat.css" rel="stylesheet">
+		<link href = "https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel = "stylesheet"/>
+		<link href = "lib/css/webchat.css" rel = "stylesheet"/>
+		<link href = "lib/css/emoji.css" rel = "stylesheet"/>
+		<link rel = "stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity = "sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin = "anonymous"/>
+		<script src = "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity = "sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin = "anonymous"></script>
 
-		<link href="lib/css/emoji.css" rel="stylesheet">
-
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
-		<!-- Optional theme
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-		-->
-		<!-- Latest compiled and minified JavaScript -->
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
-		<script type="text/javascript">
-
-		function getCookie(cname) {
-		  var name = cname + "=";
-		  var decodedCookie = decodeURIComponent(document.cookie);
-		  var ca = decodedCookie.split(';');
-		  for(var i = 0; i <ca.length; i++) {
-		      var c = ca[i];
-		      while (c.charAt(0) == ' ') {
-		          c = c.substring(1);
-		      }
-		      if (c.indexOf(name) == 0) {
-		          return c.substring(name.length, c.length);
-		      }
-		  }
-		  return "";
-		}
+		<script type = "text/javascript">
+			function getCookie(cname) {
+			  var name = cname + "=";
+			  var decodedCookie = decodeURIComponent(document.cookie);
+			  var ca = decodedCookie.split(';');
+			  for(var i = 0; i < ca.length; i++) {
+			      var c = ca[i];
+			      while (c.charAt(0) == ' ') {
+			          c = c.substring(1);
+			      }
+			      if (c.indexOf(name) == 0) {
+			          return c.substring(name.length, c.length);
+			      }
+			  }
+			  return "";
+			}
 
 			//Persistence Menu load at the begining
 			var persistenceMenu = {
@@ -65,9 +57,9 @@
 					}
 					var slideHeight =max;
 					var sliderUlWidth = slideCount * slideWidth;
-					$(el).css({ width: slideWidth, height: 'auto'});
+					$(el).css({ width : slideWidth, height: 'auto'});
 					$(el).find('ul').css({ width: sliderUlWidth, marginLeft: "0px" });
-					$(el).find('ul li').last().prependTo($(el).find('ul'));
+					$(el).find('ul li').first().prependTo($(el).find('ul'));
 					function moveLeft(el) {
 						$($(el).children()[2]).animate({
 							left: + slideWidth
@@ -94,8 +86,8 @@
 			};
 			//created Views and templates
 			var views = {
-				carousel : function(obj){
-					var carousel = '<div class="slider_'+obj.intent+' slider">'
+				carousel : function(obj,timeInMilis){
+					var carousel = '<div class="slider_'+obj.intent+"_"+timeInMilis+' slider">'
 						+'<a href="javascript:void(0)" class="control_next">></a>'
 						+'<a href="javascript:void(0)" class="control_prev"><</a>'
 						+'<ul>'
@@ -117,7 +109,6 @@
 				},
 				listTemplate : function(obj){
 					var listTemplate = '<div class="list-view">'
-						console.log(obj);
 						for(var i = 0; i < obj.text.list.length; i++){
 								listTemplate += '<div class="list-item">'
 								+'<div><span class="title"><b>'+obj.text.list[i].title+'</b></span><img max-width="80px"  src="'+obj.text.list[i].imgUrl+'"/></div>'
@@ -195,8 +186,9 @@
 						for(var i= msg.length-1; 0 <= i; i--){
 							if(msg[i].user_id.indexOf('BOT') >= 0){
 								if(msg[i].message.type && msg[i].message.type == 'carousel'){
-									$('#container .main-ul').append('<li class="bot">'+views.carousel(msg[i].message)+'</li>');
-									slider.createSlider($(".slider_"+msg[i].message.intent));
+									var timeInMilis = new Date().getTime();
+									$('#container .main-ul').append('<li class="bot">'+views.carousel(msg[i].message,timeInMilis)+'</li>');
+									slider.createSlider($(".slider_"+msg[i].message.intent+"_"+timeInMilis));
 								}
 								else if (msg[i].message.type && msg[i].message.type == 'quickReply'){
 									$('#container .main-ul').append('<li class="bot">'+views.quickReply(msg[i].message)+'</li>');
@@ -274,7 +266,7 @@
 						<a class="image" href="#"></a>
 						<div class="text-left">
 							<p class="lead emoji-picker-container">
-								<input type="text" class="form-control" name="input" placeholder="Please write a message" style="border:none" data-emojiable="true">
+								<input type = "text" class ="form-control" name = "input" style = "border:none" data-emojiable="true">
 							</p>
 						</div>
 				 </div>
@@ -282,18 +274,18 @@
 
 		  </div>
 		</div>
-		<script src="lib/js/config.js"></script>
-	  <script src="lib/js/util.js"></script>
-	  <script src="lib/js/jquery.emojiarea.js"></script>
-	  <script src="lib/js/emoji-picker.js"></script>
+		<script src = "lib/js/config.js"></script>
+	  <script src = "lib/js/util.js"></script>
+	  <script src = "lib/js/jquery.emojiarea.js"></script>
+	  <script src = "lib/js/emoji-picker.js"></script>
 		<script>
 
       $(function() {
         // Initializes and creates emoji set from sprite sheet
         window.emojiPicker = new EmojiPicker({
-          emojiable_selector: '[data-emojiable=true]',
-          assetsPath: '../../lib/img/',
-          popupButtonClasses: 'fa fa-smile-o'
+          emojiable_selector : '[data-emojiable=true]',
+          assetsPath : '../../lib/img/',
+          popupButtonClasses : 'fa fa-smile-o'
         });
         // Finds all elements with `emojiable_selector` and converts them to rich emoji input fields
         // You may want to delay this step if you have dynamically created input fields that appear later in the loading process
@@ -320,34 +312,35 @@
 								}
 
 								var request = $.ajax({
-								  url: "/api/getMessage/witai/messages",
-								  method: "POST",
-								  data: {
-										"obj":
-										{"transaction":new Date().getTime(),"message":{"text" :text },"user_id":getCookie("user_id"),"created_date": new Date()}
+								  url : "/api/getMessage/witai/messages",
+								  method : "POST",
+								  data : {
+										"obj" :
+										{"transaction" : new Date().getTime(), "message" : {"text" : text }, "user_id" : getCookie("user_id"), "created_date" : new Date()}
 									},
 								  dataType: "json"
 								});
 								request.done(function( msg ) {
 											event.target.innerHTML = "";
-											if(msg.type && msg.type=="carousel"){
-												$('#container .main-ul').append('<li class="bot">'+views.carousel(msg)+'</li>');
-												slider.createSlider($(".slider_"+msg.intent));
+											if(msg.type && msg.type == "carousel"){
+												var timeInMilis = new Date().getTime();
+												$('#container .main-ul').append('<li class="bot">'+views.carousel(msg,timeInMilis) + '</li>');
+												slider.createSlider($(".slider_" + msg.intent+"_"+timeInMilis));
 											}
 											else if(msg.type && msg.type=="listTemplate"){
-												$('#container .main-ul').append('<li class="bot">'+views.listTemplate(msg)+'</li>');
+												$('#container .main-ul').append('<li class="bot">' + views.listTemplate(msg) + '</li>');
 											}
 											else if(msg.type && msg.type=="quickReply"){
-												$('#container .main-ul').append('<li class="bot">'+views.quickReply(msg)+'</li>');
+												$('#container .main-ul').append('<li class="bot">' + views.quickReply(msg) + '</li>');
 											}
 											else if(msg.type && (msg.type=="genericButtons" || msg.type == "attachment")){
-												$('#container .main-ul').append('<li class="bot">'+views.genericButtons(msg)+'</li>');
+												$('#container .main-ul').append('<li class="bot">' + views.genericButtons(msg) + '</li>');
 											}
 											else if(msg.type && msg.type=="emoji")
 											{
-													$('#container .main-ul').append('<li class="bot"><div class="text"><span>'+msg.text.image+'</span></div><br/></li>');
+													$('#container .main-ul').append('<li class="bot"><div class="text"><span>' + msg.text.image + '</span></div><br/></li>');
 											}else{
-												$('#container .main-ul').append('<li class="bot"><div class="text"><span>'+msg.text+'</span></div><br/></li>');
+												$('#container .main-ul').append('<li class="bot"><div class="text"><span>' + msg.text + '</span></div><br/></li>');
 											}
 											$("#container").animate({scrollTop: $('#container ul').height()});
 								});
